--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/luc-domingo-5791b7161/?originalSubdomain=fr"
+  linkedin         : "https://www.linkedin.com/in/luc-domingo-5791b7161/"
   orcid            :
   pinterest        :
   soundcloud       :
