--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "LucDomingo'site"
 title_separator          : "-"
 name                     : &name "Luc Domingo"
 description              : &description "Ingénieur génie logiciel & architecte"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://lucdomingo.github.io/mywebsite/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://github.com/LucDomingo/mywebsite"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
