--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : &name "Luc Domingo"
 description              : &description "Ingénieur génie logiciel & architecte"
 url                      : https://lucdomingo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/mywebsite" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/homepage" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/LucDomingo/mywebsite"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
