--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/LucDomingo"
+  github           : "LucDomingo"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/luc-domingo-5791b7161/"
+  linkedin         : "luc-domingo-5791b7161/"
   orcid            :
   pinterest        :
   soundcloud       :
