--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "fr-FR"
 title                    : "LucDomingo"
 title_separator          : "-"
 name                     : &name "Luc Domingo"
-description              : &description "Ingénieur génie logiciel & architecte"
+description              : &description "Dev, Sys et devops"
 url                      : https://lucdomingo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/mywebsite" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/LucDomingo/mywebsite"
