--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Luc Domingo"
   avatar           : "profile.png"
-  bio              : "Ingénieur génie logiciel & architecte"
+  bio              : "Dev, Sys, Devops & architecture"
   location         : "Toulouse"
   employer         :
   pubmed           : 
